Fixed image alignment in GitHub chart

--- a/style.css
+++ b/style.css
@@ -140,7 +140,6 @@ body > div {
 
 #github > div > img {
   display: block;
-  margin-left: auto;
   margin-right: auto;
 }
 
